# wonky

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  gdd.md  gen.sh  gen_rpi.sh  gen_web.sh  luatest.lua  move.md  test.c
.cache/clangd/index/: components.c.6EDFE05275CA82E0.idx  components.h.50492B40F544E443.idx  entity.c.EABD238A32F8A52E.idx  entity.h.3675AE790278FEE5.idx  gameclient.c.A71050E96115E936.idx  gameclient.h.B791434675EB9C87.idx  main.c.C623CFB2A17D4641.idx  movesystem.c.7F1E252EA49B83F5.idx  movesystem.h.9ECCD70DDC1D15AD.idx
assets/: Untitled.xcf  char_sketch.aseprite  clown.aseprite  concept-2.aseprite  concept-3.aseprite  concept.aseprite  lildude.aseprite  npcTemplate.tj  test.tsj  wonky.tiled-session  world.tmj
assets/levels/: testgym.ldtk
assets/models/: character_test.ase  chartest.blend  chartest.blend1  house.blend
assets/scripts/: entity_types.lua  luatest.lua  main.lua  player.lua  zigtest.lua
assets/scripts/entities/: player.lua
experiments/: net.c
old/: ecs.h  entity.c  entity.h
src/: client.c  client.h  collisionsystem.c  collisionsystem.h  components.c  components.h  ecs.h  entity.c  entity.h  gameclient.c  gameclient.h  gameworld.c  gameworld.h  inputsystem.c  inputsystem.h  main.c  map.c  map.h  movesystem.c  movesystem.h  net_data.c  net_data.h  network_common.c  network_common.h  pico_ecs.h  rendersystem.c  rendersystem.h  scripting.c  scripting.h  scriptloader.c  scriptloader.h  serializer.c  serializer.h  server.c  server.h  systems.h  traits.c  traits.h  uisystem.c  uisystem.h  (+3 more)
src/tests/: test_net.c
zig-src/: lua_binder.zig
